test/invalid_confs/invalid_multiarray.lua
--ERROR: multiple members
Listen "8080" {
	echo = { "hello", "world" }
}
